2 repo impl for storage(article, author)
