# models/article.go
@@ -10,18 +10,23 @@ type Content struct {
 type Article struct {
 	ID string `json:"id"`
 	Content
-	Author    Person     `json:"author"`
+	AuthorID  string     `json:"author_id"`
 	CreatedAt *time.Time `json:"created_at"`
 	UpdateAt  *time.Time `json:"update_at"`
 }
 
 type CreateArticleModel struct {
 	Content
-	Author Person `json:"author"`
+	AuthorID string `json:"author_id"`
 }
 
 type UpdateArticleModel struct {
 	ID string `json:"id"`
 	Content
-	Author Person `json:"author"`
+	AuthorID string `json:"author_id"`
+}
+
+type ArticleList struct {
+	Articles []Article `json:"articles"`
+	Count    int       `json:"count"`
 }
